--- a/index.html
+++ b/index.html
@@ -3,27 +3,85 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Presentations | 757 R Users Group</title>	
-	 
-	<meta property="og:title" content="Presentations | 757 R Users Group">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://757RUG.github.io/presentations">
-	<meta property="og:image" content="https://raw.githubusercontent.com/757rug/meetup-link/master/757-rug-logo.png">
 	
+	<!-- https://moz.com/blog/meta-data-templates-123 -->
+	
+	<title>Presentations | Norfolk Data Science</title>
+	<meta name="description" content="A repository of presentations made at Norfolk Data Science meetings" />
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@NorfolkDataSci">
+	<meta name="twitter:title" content="Presentations | Norfolk Data Science">
+	<meta name="twitter:description" content="A repository of presentations made at Norfolk Data Science meetings">
+	<meta name="twitter:creator" content="@NorfolkDataSci">
+	<!-- Twitter Summary card images must be at least 120x120px -->
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/norfolkdatasci/meetup-link/develop/norfolk-ds-logo2.png">
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Presentations | Norfolk Data Science" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://norfolkdatasci.github.io/presentations" />
+	<meta property="og:image" content="https://raw.githubusercontent.com/norfolkdatasci/meetup-link/develop/norfolk-ds-logo2.png" />
+	<meta property="og:description" content="Presentations | Norfolk Data Science" />
+	<meta property="og:site_name" content="Norfolk Data Science" />
+
 	<meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+	
+	<style>
+	  h2 { width: 95%; margin:0 auto;}
+	  a:link { text-decoration: none; color: #000000;}
+	  img { max-width: 150px !important; max-height: 150px; margin-top: 10px; margin-left: 10px;}
+	  .card-deck-wrapper {width: 95%; margin:0 auto;}
+	</style>
+	
   </head>
   
   <body>
-    <ul>
-      <li><a target="_blank" href="https://757RUG.github.io/presentations/monthly-updates">Monthly Meeting Updates</a></li>
-	  <li><a target="_blank" href="https://757RUG.github.io/presentations/land-a-job-writing-r-code">Land a Job Writing R Code</a></li>
-	  <li><a target="_blank" href="https://757RUG.github.io/presentations/working-with-apis-from-r">Working with APIs from R</a></li>
-	  <li><a target="_blank" href="https://757RUG.github.io/presentations/using-and-building-apis-in-r">Using and Building APIs in R</a></li>
-	  <li><a target="_blank" href="https://757RUG.github.io/presentations/non-standard-graphics/notsostandard.html">Non-Standard Graphics</a></li>
-    </ul>
+    
+    <a href="https://github.com/norfolkdatasci/presentations"><img style="z-index: 1000; margin: 0px !important; max-height: 300px !important; position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+  
+    <br>
+	<br>
+	<h2>Norfolk Data Science Presentations</h2>
+	<br>
+	<br>
+	
+	<div class="card-deck-wrapper">
+	
+	  <div class="card-columns">
+	    
+		  <div class="card">		  
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/monthly-updates">
+			<img class="card-img-top" src="https://raw.githubusercontent.com/norfolkdatasci/meetup-link/develop/norfolk-ds-logo2.png" alt="norfolk-data-science-rug-logo">
+		    <div class="card-block">
+			  <h4 class="card-title">Monthly Meeting Updates</h4>
+		  	  <p class="card-text">A repository of short slide decks of monthly news to the Norfolk Data Science Meetup group.</p>
+		    </div>
+			</a>
+		  </div>
+		
+		<div class="card">	
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/learning-git">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/learning-git/master/img/learn-git.png" alt="learning-git">
+			<div class="card-block">
+			  <h4 class="card-title">Learn the Basics of Git</h4>
+			  <p class="card-text">A guide for individuals relatively new to git and GitHub.</p>
+			</div>
+	      </a>
+	    </div>
+		
+
+	  </div>
+	</div>
+	
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
   </body>
 
 </html>    
