--- a/monthly-updates/index.html
+++ b/monthly-updates/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Norfolk Data Science</title>
-      
+     <! --- SET THE URL OF YOUR PRESENTATION. ---> 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   
