2016-12 Include Norfolk Forward
Include a message about Norfolk Forward since it appears that this group might be a potential sponsorship partner

--- a/monthly-updates/2016-12.html
+++ b/monthly-updates/2016-12.html
@@ -1093,7 +1093,7 @@ hljs.initHighlightingOnLoad();
 
 <p>Prefer to join forces with established group
 <br>
-(DC Data Community, Code4HR)</p>
+(Norfolk Forward, Code4HR, DC Data Community)</p>
 
 </div>
 
