Tweak Bayes Presentation

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
 			</div>
 	      </a>
 	    </div>
+	    
+		<div class="card">	
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/building-bayes">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/learning-git/master/img/learn-git.png" alt="learning-git">
+			<div class="card-block">
+			  <h4 class="card-title">Learn the Basics of Git</h4>
+			  <p class="card-text">A guide for individuals relatively new to git and GitHub.</p>
+			</div>
+	      </a>
+	    </div>	    
 		
 
 	  </div>
