Add Link to Bayes Presentation

--- a/index.html
+++ b/index.html
@@ -60,32 +60,31 @@
 			<img class="card-img-top" src="https://raw.githubusercontent.com/norfolkdatasci/meetup-link/develop/norfolk-ds-logo2.png" alt="norfolk-data-science-rug-logo">
 		    <div class="card-block">
 			  <h4 class="card-title">Monthly Meeting Updates</h4>
-		  	  <p class="card-text">A repository of short slide decks of monthly news to the Norfolk Data Science Meetup group.</p>
+		  	  <p class="card-text">A repository of short slide decks of monthly news to the Norfolk Data Science Meetup group</p>
 		    </div>
 			</a>
 		  </div>
 		
 		<div class="card">	
 		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/learning-git">		  
-			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/learning-git/master/img/learn-git.png" alt="learning-git">
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/learning-git/master/img/learn-git.png" alt="Learn Git">
 			<div class="card-block">
 			  <h4 class="card-title">Learn the Basics of Git</h4>
-			  <p class="card-text">A guide for individuals relatively new to git and GitHub.</p>
+			  <p class="card-text">A guide for individuals relatively new to git and GitHub</p>
 			</div>
 	      </a>
 	    </div>
 	    
 		<div class="card">	
 		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/building-bayes">		  
-			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/learning-git/master/img/learn-git.png" alt="learning-git">
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/building-bayes/img/Bayes_rule.png" alt="Bayes Theorem">
 			<div class="card-block">
-			  <h4 class="card-title">Learn the Basics of Git</h4>
-			  <p class="card-text">A guide for individuals relatively new to git and GitHub.</p>
+			  <h4 class="card-title">Build a Simple Bayes Classifier</h4>
+			  <p class="card-text">A guide for individuals interested in learning about Bayes Theorem and its application to predictive classifiers</p>
 			</div>
 	      </a>
 	    </div>	    
 		
-
 	  </div>
 	</div>
 	
