Update presentations page

--- a/index.html
+++ b/index.html
@@ -80,10 +80,21 @@
 			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/building-bayes/img/Bayes_rule.png" alt="Bayes Theorem">
 			<div class="card-block">
 			  <h4 class="card-title">Build a Simple Bayes Classifier</h4>
-			  <p class="card-text">A guide for individuals interested in learning about Bayes Theorem and its application to predictive classifiers</p>
+			  <p class="card-text">A guide for individuals interested in learning about Bayes Theorem and its application to predictive classifiers.</p>
 			</div>
 	      </a>
 	    </div>	    
+	    
+		<div class="card">	
+		  <a target="_blank" href="https://cdn.rawgit.com/NorfolkDataSci/presentations/7a9c1052/sql-for-data-science/2017-02%20SQL%20for%20Data%20Science.pdf">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/sql-for-data-science/languages-data-mining-r-python-sql.jpg" alt="sql-venn-diagram">
+			<div class="card-block">
+			  <h4 class="card-title">SQL for Data Science</h4>
+			  <p class="card-text">This presentation covers the basics of installing a SQL client before diving into 
+examples of SQL queries that perform some more analytical and data sciencey tasks.</p>
+			</div>
+	      </a>
+	    </div>
 		
 	  </div>
 	</div>
