checking style format

--- a/python-for-data-science/python-for-data-science.slides.html
+++ b/python-for-data-science/python-for-data-science.slides.html
@@ -430,6 +430,19 @@ This is in the <code>.bash_profile</code> file</p>
 
 </div>
 </div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="k">print</span> <span class="s2">&quot;this is some code&quot;</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
 </div></section></section>
 </div>
 </div>
