add logo thumbnail to card

--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@ examples of SQL queries that perform some more analytical and data sciencey task
 			  <p class="card-text">A discussion of when is simulation better than analysis.</p>
 			</div>
 	      </a>
+	    </div>
+		
+		<div class="card">	
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/python-for-data-science">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/python-for-data-science/img/pandas.jpg" alt="Python for data science">
+			<div class="card-block">
+			  <h4 class="card-title">Python for data science</h4>
+			  <p class="card-text">Get up and running with python and learn the basic tools and libraries for data analysis</p>
+			</div>
+	      </a>
 	    </div>	
 		
 	  </div>
