--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@ examples of SQL queries that perform some more analytical and data sciencey task
 			  <p class="card-text">Get up and running with python and learn the basic tools and libraries for data analysis</p>
 			</div>
 	      </a>
+	    </div>
+		
+		<div class="card">	
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/r-nyc-recap">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/r-nyc-recap/img/1200px-I_Love_New_York.svg.png" alt="R Conference NYC">
+			<div class="card-block">
+			  <h4 class="card-title">R Conference NYC</h4>
+			  <p class="card-text">Recap of R Conference NYC</p>
+			</div>
+	      </a>
 	    </div>	
 		
 	  </div>
