--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ examples of SQL queries that perform some more analytical and data sciencey task
 			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/r-nyc-recap/img/1200px-I_Love_New_York.svg.png" alt="R Conference NYC">
 			<div class="card-block">
 			  <h4 class="card-title">R Conference NYC</h4>
-			  <p class="card-text">Recap of R Conference NYC</p>
+			  <p class="card-text">Recap of R Conference NYC, an annual conference in NYC on R usage and data science in general</p>
 			</div>
 	      </a>
 	    </div>	
