update with resume talk card

--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@ examples of SQL queries that perform some more analytical and data sciencey task
 			  <p class="card-text">Recap of R Conference NYC, an annual conference in NYC on R usage and data science in general</p>
 			</div>
 	      </a>
+	    </div>
+		
+		<div class="card">	
+		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/data-science-resume">		  
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/data-science-resume/img/cover_image.png" alt="The data science resume">
+			<div class="card-block">
+			  <h4 class="card-title">Landing a data science job</h4>
+			  <p class="card-text">A few tips on building on an online presence and tweaking your data science resume</p>
+			</div>
+	      </a>
 	    </div>	
 		
 	  </div>
