add image to card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ examples of SQL queries that perform some more analytical and data sciencey task
 		
 		<div class="card">	
 		  <a target="_blank" href="https://norfolkdatasci.github.io/presentations/data-science-resume">		  
-			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/data-science-resume/img/cover_image.png" alt="The data science resume">
+			<img class="card-img-top" src="https://raw.githubusercontent.com/NorfolkDataSci/presentations/master/data-science-resume/img/cover_logo.jpg" alt="The data science resume">
 			<div class="card-block">
 			  <h4 class="card-title">Landing a data science job</h4>
 			  <p class="card-text">A few tips on building on an online presence and tweaking your data science resume</p>
